# drake-franka-driver

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .mailmap  .oclint  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build_and_run_franka.sh  compile_commands_export.sh  compile_commands_isolate.py  construct_run_franka_0.sh  franka.sh  franka.yaml  franka_0.sh  franka_0_sim.sh  franka_G.sh  franka_robot_multibody_collision.urdf  franka_sim.sh  franka_sim.yaml  pull_request_template.md  setup.cfg  setup.sh
.circleci/: config.yml
cmake/modules/: FindYaml.cmake  Findgflags.cmake
include/: communication_interface.h  constraint_solver.h  dexai_log.h  examples_common.h  franka_driver_utils.h  franka_plan_runner.h  momap_log.h  polynomial_encode_decode.h  robot_parameters.h  types.h  util_conv.h  util_io.h  util_math.h  util_std.h  util_string.h  utils.h
include/lcmtypes/: robot_joint.hpp  robot_spline_t.hpp
include/robot_msgs/: bool_t.hpp  pause_cmd.hpp  trigger_t.hpp
lcmtypes/: bool_t.lcm  pause_cmd.lcm  robot_spline_t.lcm  stop_cmd.lcm
lcmtypes/stop_cmd/: stop_cmd.hpp
scripts/: franka_server.py  publish_bool.py  setup_env.sh
scripts/robot_msgs/: __init__.py  bool_t.py
src/: communication_interface.cc  constraint_solver.cc  dexai_log.cc  drake_franka_driver.cc  examples_common.cpp  franka_driver.cc  franka_driver.h  franka_driver_utils.cc  franka_plan_runner.cc  kuka_plan_runner.cc  master_plan_runner.cc  momap_log.cc  old_callback_code.cc  polynomial_encode_decode.cc  robot_parameters.cc  send_stop.cc  stop_cmd.lcm  test_runner.cc  test_vector_performance.cc  types.h  util_conv.cc  util_io.cc  util_math.cc  util_std.cc  util_string.cc
src/driver/: communication_interface.cc  communication_interface.h  constraint_solver.cc  constraint_solver.h  franka_driver.cc  franka_plan_runner.cc  franka_plan_runner.h
src/examples/: examples_common.cpp  examples_common.h
src/lcmtypes/: robot_joint.hpp  robot_joint.lcm  robot_spline_t.hpp  trigger_t.lcm
src/robot_msgs/: bool_t.hpp  pause_cmd.hpp  trigger_t.hpp
src/stop_cmd/: stop_cmd.hpp
src/utils/: dexai_log.cc  dexai_log.h  polynomial_encode_decode.cc  polynomial_encode_decode.h  robot_parameters.cc  robot_parameters.h  util_conv.cc  util_conv.h  util_io.cc  util_io.h  util_math.cc  util_math.h  util_string.cc  util_string.h  utils.h
tests/: test_constraint_solver.cc  test_continuity.cc  test_franka_driver.cc  test_robot_parameters.cc  test_test.cc  test_util_conv.cc  test_util_io.cc  test_util_math.cc  test_util_string.cc
tests/data/: franka_test.urdf  franka_test.yaml  franka_test_with_mass.urdf  franka_test_with_mass_no_joint_limits.urdf
